--- a/f/blog/templates/blog/about.html
+++ b/f/blog/templates/blog/about.html
@@ -5,7 +5,7 @@ About
 {% endblock %}
 
 {% block content %}
-<h1 style="text-align: center; color: rgba(160, 71, 49, 0.849);">About</h1>
+<h1 style="text-align: center; color: rgba(160, 71, 49, 0.849);">О нас</h1>
 <div class="rezume" style="margin-left: 16%; color: rgba(170, 92, 73, 0.822);">
     <ol><h3>Разработчик: Дворова Екатерина Владимировна</h3></ol>
     <ol><h4>Личные качества:</h4></ol>
