--- a/f/blog/templates/blog/base.html
+++ b/f/blog/templates/blog/base.html
@@ -19,7 +19,8 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'home' %}" class="nav-link px-2 link-secondary">Главная</a></li>
+                <li><a href="{% url 'home' %}" class="nav-link px-2 link-body-emphasis">Главная</a></li>
+                <li><a href="{% url 'create' %}" class="nav-link px-2 link-body-emphasis">Создать пост</a></li>
                 <li><a href="{% url 'about' %}" class="nav-link px-2 link-body-emphasis">О нас</a></li>
             </ul>
 
