--- a/f/blog/templates/blog/create.html
+++ b/f/blog/templates/blog/create.html
@@ -13,6 +13,6 @@ Create
         <br>
         {{form.post}}
         <br>
-        <button type="submit" class="btn btn-success">Добавить</button>
+        <button type="submit" class="btn btn-success" style="width: 100%; text-align:center; background: rgba(160, 71, 49, 0.759); border: 1px solid rgba(124, 53, 35, 0.709);">Добавить</button>
     </form>
 {% endblock %}
